2005-03-30  Francois Dumont  <dums@stlport...>

	* stlport/stl/_fstream.c: Try to fix ambiguous type deduction in a max
	call under WinCE.
	
	* stlport/stl/_cmath.h: Fix missing non Standard hypot function under
	WinCE thanks Micheal Fink.
	
	* stlport/stl/_cmath.h: Attempt to fix the WinCE math function support
	where neither *f nor *l functions are present even if the compiler
	support the long double type.
	
2005-03-30  Petr Ovtchenkov  <ptr@island...>

	* stlport/assert.h, float.h, iso646.h, limits.h, errno.h:
	added in accordance with Standard D.5 [compatibility with standard
	C library] to prevent wrong std interpretation in ill-formed native
	headers [definition of namespace std in C headers].

	* test/unit/test_errno.cpp: check correct processing of errno.h
	header.

	* build/test/eh: build eh tests again.

	* test/eh/LeakCheck.h, TestClass.cpp, TestClass.h: fix and clear.

	* test/eh/test_hash_map.cpp, test_hash_set.cpp: mutiset/multimap
	has no == operator [no container equality]; this fix is quick-and-dirty

2005-03-29  Petr Ovtchenkov  <ptr@island...>

	* build/Makefiles/gmake/app/rules.mak, freebsd/rules-so.mak,
	linux/rules-so.mak, openbsd/rules-so.mak, sunos/rules-so.mak:
	fix link sequence---the end objects should be really last, i.e. after libs.
	This affected by linkage without libstdc++.

	* stlport/stl/_cwchar.h, stlport/wchar.h: workarounds for FreeBSD.

	* due to change in link sequence most tests [including exceptions] pass
	for uClibc.

	* stlport/mmemory.h: garbage, removed.

	* stlport/export: ditto.

2005-03-28  Francois Dumont  <dums@stlport...>

	* stlport/stl/_istream.h, _ostream.h: Fix assignment operators prototypes
	for the sentry struct. Thanks -Weffc++ feature of gcc.

	* build/Makefiles/gmake/cygmin/rules-install-so.mak: Add missing folder
	creation in the install process thanks Charlemagne report.

	* build/Makefiles/nmake/icl.mak: Fix Intel compiler build system under
	Windows.
	
2005-03-28  Petr Ovtchenkov  <ptr@island...>
